# home-lab-kubernetes

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  setup.cfg
dry/applications/loki-stack/base/: kustomization.yaml  secret.yaml
dry/applications/namespaces/base/: kustomization.yaml  logging.namespace.k8s.yaml
dry/applications/spinnaker/base/: kustomization.yaml
dry/envs/global/: .envrc
dry/envs/local/: kubeconfig.yaml
pre_commit_hooks/: hydrate_kustomize.py
wet/applications/loki-stack/envs/local/: .env  generated.k8s.yaml
wet/applications/namespaces/envs/local/: .envrc  generated.k8s.yaml
wet/applications/spinnaker/envs/local/: generated.k8s.yaml
