[metadata]
name = pre_commit_hooks
version = 0.0.0
description = some pre-commit hooks for kustomize
license = MIT

[options]
packages = find:
install_requires =
    gitpython>=3.1
python_requires = >=3.10

[options.entry_points]
console_scripts =
    hydrate-kustomize = pre_commit_hooks.hydrate_kustomize:main

[bdist_wheel]
universal = True
